--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
-    "zustand": "^3.4.1"
+    "zustand": "^3.4.1",
+    "zustand-persist": "^0.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
